<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/existingfontroot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/existingfontcontextmenubackground"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/name_new_font"
        android:textColor="@color/black"
        android:textSize="18dip" />

    <EditText
        android:id="@+id/name_new_font_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/okcancellinearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/name_ok_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/name_cancel_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>