<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackboardbackground"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/exporttitleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/exporttitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/export_font"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exportemailgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="25dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/exportemailnote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/email_to_string"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/exportemailaddressbox"
            android:layout_width="254dp"
            android:layout_height="47dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@android:drawable/editbox_background"
            android:gravity="center" />

        <Button
            android:id="@+id/exportsendbutton"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bluesquarebutton"
            android:text="@string/send_string"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Spinner
        android:id="@+id/exportspinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exportemailgroup"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
    